add settings version to version column in snapshots log

--- a/ereuse_devicehub/templates/inventory/snapshots_list.html
+++ b/ereuse_devicehub/templates/inventory/snapshots_list.html
@@ -87,7 +87,7 @@
                         {% endif %}
                       </td>
                       <td>
-                          {{ snap.version }}
+                          {{ snap.get_version() }}
                       </td>
                       <td>
                         {% if snap.get_device() %}
