--- a/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
@@ -71,8 +71,8 @@
 
             <div class="credits">
               <a href="https://help.usody.com/en/getting-started/login-usody/" target="_blank">Help</a> | 
-              <a href="https://pangea.org/es/politica-de-privacidad/" target="_blank">Privacy</a> | 
-              <a href="https://pangea.org/aviso-legal/" target="_blank">Terms</a>
+              <a href="https://www.usody.com/legal/privacy-policy" target="_blank">Privacy</a> | 
+              <a href="https://www.usody.com/legal/terms" target="_blank">Terms</a>
             </div>
 
           </div>
