--- a/ereuse_devicehub/templates/inventory/erasure.html
+++ b/ereuse_devicehub/templates/inventory/erasure.html
@@ -1,25 +1,37 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Data Sanitization Certificate</title>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT"
+          crossorigin="anonymous">
 <style type="text/css" media="all">
   @page {
     size: A4 portrait; /* can use also 'landscape' for orientation */
-    margin: 100px 1cm 150px 1cm;
+    margin: 1.0cm 1.5cm 3.5cm 1.5cm;
 
-    @top-left{
+    @top {
       content: element(header);
     }
 
-    @bottom-left{
+    @bottom {
       content: element(footer);
     }
 
   }
-
+  body {
+    width: 100% !important;
+    height: 100%;
+    background: #fff;
+    color: black;
+    font-size: 100%;
+    line-height: 1.65;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: none; 
+  }
 
   header {
     position: running(header); 
@@ -30,155 +42,176 @@
     position: running(footer);
     /*height: 150px;*/
   }
+  
+  .body_content {
+     position: relative;
+     page-break-inside: auto;
+     width: 100%;
+     /*overflow: hidden;*/
+  }
 
   img {max-height: 150px; width: auto;}
   .company-logo {float: left;}
   .customer-logo {float: right;}
-  .signature {margin-top: 100px;}
 </style>
 </head>
 <body>
-<div class="container">
-  <header>
-    <div class="row gx-0 mb-5">
-      <div class="col pt-3" style="background-color: #d5a6bd;">
-        <p style="margin-left: 10px;">2022-12-26 16:51:32 (+0100), USODY DRIVE ERASURE 2022</p>
-      </div>
+  <header class="page-header">
+    <div class="col" style="background-color: #d5a6bd;">
+      <p style="margin-left: 10px;">2022-12-26 16:51:32 (+0100), USODY DRIVE ERASURE 2022</p>
     </div>
   </header>
-
+<div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-6">
       <img class="company-logo" src="https://ksr-ugc.imgix.net/assets/003/488/267/210c162995de80609124abf81047bca7_original.png?ixlib=rb-4.0.2&w=700&fit=max&v=1427136681&auto=format&frame=1&q=92&s=eb4411c5e9d3557ffa64598ac3b238a6" />
     </div>
-    <div class="col">
+    <div class="col-6">
       <img class="customer-logo" src="https://e7.pngegg.com/pngimages/243/790/png-clipart-your-company-logo-doing-business-as-company-logo-name-creative-company-logo-free-logo-design-template-text.png" />
     </div>
   </div>
+</div>
 
+<div class="container body-content">
   <div class="row mt-3">
     <div class="col">
       <h1>Data Sanitization Certificate</h1>
     </div>
   </div>
-
+  
   <div class="row mt-3">
-    <div class="col">
+    <div class="col-12">
       <strong>Entity Information</strong>
-      <div class="row">
-        <div class="col-2">
-          <span>Name:</span>
-        </div>
-        <div class="col">
-          <span>ACME</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <span>Location:</span>
-        </div>
-        <div class="col">
-          <span>Paseo de Gracia, 2,  08007 Barcelona, España</span>
-        </div>
-      </div>
+    </div>
+    <div class="col-12">
+      <table class="body_content">
+        <tbody>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              Name:
+            </td>
+            <td style="width:80%;">
+              ACME
+            </td>
+          </tr>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              Location:
+            </td>
+            <td style="width:80%;">
+              <span>Paseo de Gracia, 2, 08007 Barcelona, España</span>
+            </td>
+          </tr>
+      </table>
     </div>
   </div>
 
-
-  <div class="row mt-3">
-    <div class="col">
+  <div class="row" style="padding-top: 20px;">
+    <div class="col-12">
       <strong>Responsible Sanitization Entity</strong>
-      <div class="row">
-        <div class="col-2">
-          <span>Name:</span>
-        </div>
-        <div class="col">
-          <span>Your company</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <span>Responsible Person</span>
-        </div>
-        <div class="col">
-          <span>John Data</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <span>Location:</span>
-        </div>
-        <div class="col">
-          <span>Madrid, Gran Via 8, 28040 Madrid, España</span>
-        </div>
-      </div>
+    </div>
+    <div class="col-12">
+      <table class="body_content">
+        <tbody>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>Name:</span>
+            </td>
+            <td style="width:80%;">
+              <span>Your company</span>
+            </td>
+          </tr>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>Responsible Person</span>
+            </td>
+            <td style="width:80%;">
+              <span>John Data</span>
+            </td>
+          </tr>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>Location:</span>
+            </td>
+            <td style="width:80%;">
+              <span>Madrid, Gran Via 8, 28040 Madrid, España</span>
+            </td>
+          </tr>
+      </table>
     </div>
   </div>
 
-
-  <div class="row mt-3">
-    <div class="col">
+  <div class="row" style="padding-top: 20px;">
+    <div class="col-12">
       <strong>Summary</strong>
-      <div class="row">
-        <div class="col-2">
-          <span>N&deg; of devices:</span>
-        </div>
-        <div class="col">
-          <span>16</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <span>N&deg; of data storage unit(s):</span>
-        </div>
-        <div class="col">
-          <span>16</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <span>Sanitization result:</span>
-        </div>
-        <div class="col">
-          <span>Failed</span>
-        </div>
-      </div>
+    </div>
+    <div class="col-12">
+      <table class="body_content">
+        <tbody>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>N&deg; of devices:</span>
+            </td>
+            <td style="width:80%;">
+              <span>16</span>
+            </td>
+          </tr>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>N&deg; of data storage unit(s):</span>
+            </td>
+            <td style="width:80%;">
+              <span>16</span>
+            </td>
+          </tr>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>Sanitization result:</span>
+            </td>
+            <td style="width:80%;">
+              <span>Failed</span>
+            </td>
+          </tr>
+      </table>
     </div>
   </div>
 
-
-  <div class="row mt-3">
-    <div class="col">
+  <div class="row" style="padding-top: 20px;">
+    <div class="col-12">
       <strong>Report Details</strong>
-      <div class="row">
-        <div class="col-2">
-          <span>Report UUID:</span>
-        </div>
-        <div class="col">
-          <span>8bcef704-ba04-4320-8056-c8a5c401dbe3</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <span>Report Date:</span>
-        </div>
-        <div class="col">
-          <span>2022-12-26 11:26:24</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <span>Software Version:</span>
-        </div>
-        <div class="col">
-          <span>Usody Drive Erasure 2022.03.0</span>
-        </div>
-      </div>
+    </div>
+    <div class="col-12">
+      <table class="body_content">
+        <tbody>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>Report UUID:</span>
+            </td>
+            <td style="width:80%;">
+              <span>8bcef704-ba04-4320-8056-c8a5c401dbe3</span>
+            </td>
+          </tr>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>Report Date:</span>
+            </td>
+            <td style="width:80%;">
+              <span>2022-12-26 11:26:24</span>
+            </td>
+          </tr>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>Software Version:</span>
+            </td>
+            <td style="width:80%;">
+              <span>Usody Drive Erasure 2022.03.0</span>
+            </td>
+          </tr>
+      </table>
     </div>
   </div>
 
-
-  <div class="row mt-5">
+  <div class="row" style="margin-top:25px;">
     <div class="col">
       <p>
         I hereby declare that the data erasure process has been carried 
@@ -187,20 +220,24 @@
     </div>
   </div>
 
-
-  <div class="row border-top border-dark signature">
-    <div class="col d-flex justify-content-center">
-      <span>Data Responsable</span>
-    </div>
-    <div class="col d-flex justify-content-center">
-      <span>Data Supervisor</span>
+  <div class="row" style="margin-top:225px;">
+    <div class="col-12">
+      <table class="body_content" style="border-top: 1px solid #000;">
+        <tbody>
+          <tr style="padding-top:5px;">
+            <td style="width:50%; text-align: center;">
+              <span>Data Responsable</span>
+            </td>
+            <td style="width:50%; text-align: center;">
+              <span>Data Supervisor</span>
+            </td>
+          </tr>
+      </table>
     </div>
   </div>
-</div>
 
-<p style="break-before: page;"></p>
+  <p style="break-before: page;"></p>
 
-<div class="container mb-5">
   <div class="row mt-3">
     <div class="col">
       <h1>Devices Summary</h1>
